--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
 
 @layer components {
   .btn {
-    @apply rounded-md h-8 px-4 text-base;
+    @apply rounded-md h-8 px-4;
   }
   .btn-primary {
     @apply btn bg-slate-700 text-white ;
