feat: 优化翻译逻辑,添加新页面

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -59,3 +59,9 @@
   border-color:rgb(51, 65 ,85 ) !important;
   color: #fff !important;
 }
+
+/* 防止切换标签页的高度问题 */
+html,body{
+  height:unset !important;
+}
+
